WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
61691
REGRESSION (
r86578
): Flash content missing from mercurynews.com
https://bugs.webkit.org/show_bug.cgi?id=61691
Summary
REGRESSION (r86578): Flash content missing from mercurynews.com
Anders Carlsson
Reported
2011-05-28 13:34:59 PDT
REGRESSION (
r86578
): Flash content missing from mercurynews.com
Attachments
Patch
(1.69 KB, patch)
2011-05-28 13:36 PDT
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-05-28 13:36:32 PDT
Created
attachment 95270
[details]
Patch
Anders Carlsson
Comment 2
2011-05-28 13:39:28 PDT
Committed
r87624
: <
http://trac.webkit.org/changeset/87624
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug