2011-05-28  Anders Carlsson  <andersca@apple.com>

Reviewed by Dan Bernstein.

        REGRESSION (r86578): Flash content missing from mercurynews.com
        https://bugs.webkit.org/show_bug.cgi?id=61691
        <rdar://problem/9519893>

        If the plug-in doesn't have access to the toplevel URL, make sure to
        return *something* to the plug-in.

        * PluginProcess/PluginControllerProxy.cpp:
        (WebKit::PluginControllerProxy::tryToShortCircuitInvoke):


Canonical link: https://commits.webkit.org/77129@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87624 268f45cc-cd09-0410-ab3c-d52691b4dbfc